log/build_2023-11-28_12-13-20/robu/stderr.log
  File "/home/robu/work/robu_brajon19_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 101
    elif self.wallfollower_state == WallFollowerStates.WF_STATE_DRIVE2WALL
                                                                          ^
SyntaxError: expected ':'

